refactor: Enforce Java 8 compatibility and replace String.isBlank with trim().isEmpty